--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "currency.js": "^2.0.4",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.445.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -29,6 +32,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/": "phosphor-icons/react",
+    "@types/axios": "^0.14.0",
     "@types/node": "^22.6.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
